--- a/hugo.toml
+++ b/hugo.toml
@@ -80,7 +80,7 @@ poweredby = true
 highlightjs = true
 socialmarkup = true
 toc = true
-displayrssicon = true
+displayrssicon = false
 
 ## Main Menu
 # [[menu.main]]
